# mpfc

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.am.shared  NEWS  ProjectHome.md  README  ReleaseNotes.md  autogen.sh  build_rcfile.pl  configure.ac  configure.in  configure.in.shared  configure.in.static  mpfc.pc.in
doc/: Makefile.am  mpfc.1  mpfc.texi
libcue/: Makefile.am  autogen.sh  configure.ac
libcue/src/libcue/: Makefile.am  cd.c  cd.h  config.h  cue_parser.y  cue_scanner.l  libcue.h  rem.c  rem.h
libmpfc/: Makefile.am  cfg.c  cfg_rcfile.c  charset.c  command.c  file.c  file_http.c  file_http.h  file_reg.c  file_reg.h  finder.c  genre_list.c  id3.c  logger.c  plugin.c  plugin_charset.c  plugin_effect.c  plugin_general.c  plugin_input.c  plugin_mng.c  plugin_output.c  plugin_plist.c  song_info.c  string.c  util.c  vfs.c
libmpfcwnd/: Makefile.am  wnd.c  wnd.h  wnd_basic.c  wnd_basic.h  wnd_button.c  wnd_button.h  wnd_checkbox.c  wnd_checkbox.h  wnd_class.c  wnd_class.h  wnd_combobox.c  wnd_combobox.h  wnd_common_msg.c  wnd_common_msg.h  wnd_def_handlers.c  wnd_def_handlers.h  wnd_dialog.c  wnd_dialog.h  wnd_dlgitem.c  wnd_dlgitem.h  wnd_editbox.c  wnd_editbox.h  wnd_filebox.c  wnd_filebox.h  wnd_hbox.c  wnd_hbox.h  wnd_kbd.c  wnd_kbd.h  wnd_kbind.c  wnd_kbind.h  wnd_label.c  wnd_label.h  wnd_listbox.c  wnd_listbox.h  wnd_mouse.c  wnd_mouse.h  wnd_msg.c  wnd_msg.h  wnd_multiview_dialog.c  (+16 more)
plugins/: Makefile.am
plugins/charset/: Makefile.am
plugins/charset/ru/: Makefile.am  ru.c
plugins/effect/: Makefile.am
plugins/effect/echo/: Makefile.am  echo.c
plugins/general/: Makefile.am
plugins/input/: Makefile.am
plugins/input/audiocd/: Makefile.am  audiocd.c  audiocd.h  cddb.c  cddb.h
plugins/input/cue/: Makefile.am  cue.c  cue_sheet.c  cue_sheet.h  test.c
plugins/input/flac/: Makefile.am  flac.c
plugins/input/mp3/: Makefile.am  getlen.c  getlen.h  mp3.c  mp3.h  new_mp3.c  old_mp3.c
plugins/input/ogg/: Makefile.am  ogg.c  vcedit.c
plugins/input/radio/: Makefile.am  radio.c
plugins/input/recorder/: Makefile.am  recorder.c
plugins/input/timidi/: Makefile.am  timidi.c  timidi.h
plugins/input/wav/: Makefile.am  wav.c  wav.h
plugins/output/: Makefile.am
plugins/output/alsa/: Makefile.am  alsa.c
plugins/output/disk_writer/: Makefile.am  writer.c
plugins/output/esd/: Makefile.am  esd.c
plugins/output/oss/: Makefile.am  oss.c
plugins/plist/: Makefile.am
plugins/plist/audiocd/: Makefile.am  audiocd.c
plugins/plist/cue/: Makefile.am  cue.c  cue_sheet.c
plugins/plist/m3u/: Makefile.am  m3u.c
plugins/plist/pls/: Makefile.am  pls.c
po/: POTFILES.in  ru.po
src/: Makefile.am  Makefile.am.shared  Makefile.am.static  browser.c  browser.h  button.c  button.h  cfg.c  cfg.h  charset.h  choice_ctrl.c  choice_ctrl.h  colors.c  colors.h  combobox.c  combobox.h  command.h  csp.h  dlg_ctrl.c  dlg_ctrl.h  dlgbox.c  dlgbox.h  editbox.c  editbox.h  ep.c  ep.h  eqwnd.c  eqwnd.h  error.c  error.h  file.h  file_input.c  file_input.h  file_utils.c  file_utils.h  finder.c  finder.h  genp.h  genre_list.h  help_screen.c  (+63 more)
src/cfg/: Makefile.am  cfg.c
src/file/: Makefile.am  file.c  http.c  http.h  reg.c  reg.h
src/glist/: Makefile.am  genre_list.c
src/myid3/: Makefile.am  id3.c
src/plugin/: Makefile.am  ep.c  inp.c  pmng.c
src/util/: Makefile.am  buf.c  util.c
