AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(mpfc, 1.1.2)
AC_PROG_CC
AC_PROG_LIBTOOL

AM_CONFIG_HEADER(config.h)
AC_CHECK_LIB(ncurses, initscr)
AC_CHECK_LIB(pthread, pthread_create)
AC_CHECK_LIB(z, compress)
AC_CHECK_LIB(m, pow)
AC_CHECK_LIB(mad, mad_stream_init)
AC_CHECK_LIB(dl, dlopen)
AC_CHECK_LIB(vorbis, vorbis_dsp_clear)
AC_CHECK_LIB(vorbisfile, ov_open)
AC_CHECK_LIB(ogg, ogg_stream_init)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(resolv, gethostbyname)
AC_CHECK_LIB(gpm, Gpm_Open)

AM_GNU_GETTEXT

AC_OUTPUT(Makefile src/Makefile src/util/Makefile src/glist/Makefile \
	 	    src/cfg/Makefile src/file/Makefile src/myid3/Makefile \
			intl/Makefile po/Makefile.in m4/Makefile po/Makefile \
			plugins/Makefile plugins/input/Makefile plugins/output/Makefile \
			plugins/input/mp3/Makefile plugins/input/wav/Makefile \
			plugins/output/oss/Makefile plugins/effect/Makefile \
			plugins/effect/echo/Makefile plugins/input/audiocd/Makefile \
			plugins/input/radio/Makefile plugins/output/disk_writer/Makefile \
			plugins/input/ogg/Makefile plugins/input/timidi/Makefile \
			doc/Makefile src/plugin/Makefile)
